--- a/src/fabric-1.16.2/mappings/sounds.yaml
+++ b/src/fabric-1.16.2/mappings/sounds.yaml
@@ -667,151 +667,151 @@ entity.ravager.hurt: ENTITY_RAVAGER_HURT
 entity.ravager.step: ENTITY_RAVAGER_STEP
 entity.ravager.stunned: ENTITY_RAVAGER_STUNNED
 entity.ravager.roar: ENTITY_RAVAGER_ROAR
-block.lantern.break: block.lantern.break
-block.lantern.fall: block.lantern.fall
-block.lantern.hit: block.lantern.hit
-block.lantern.place: block.lantern.place
-block.lantern.step: block.lantern.step
-entity.mooshroom.convert: entity.mooshroom.convert
-entity.mooshroom.eat: entity.mooshroom.eat
-entity.mooshroom.milk: entity.mooshroom.milk
-entity.mooshroom.suspicious_milk: entity.mooshroom.suspicious_milk
-music.under_water: music.under_water
-block.nether_wart.break: block.nether_wart.break
-item.nether_wart.plant: item.nether_wart.plant
-entity.ocelot.hurt: entity.ocelot.hurt
-entity.ocelot.ambient: entity.ocelot.ambient
-entity.ocelot.death: entity.ocelot.death
-entity.panda.pre_sneeze: entity.panda.pre_sneeze
-entity.panda.sneeze: entity.panda.sneeze
-entity.panda.ambient: entity.panda.ambient
-entity.panda.death: entity.panda.death
-entity.panda.eat: entity.panda.eat
-entity.panda.step: entity.panda.step
-entity.panda.cant_breed: entity.panda.cant_breed
-entity.panda.aggressive_ambient: entity.panda.aggressive_ambient
-entity.panda.worried_ambient: entity.panda.worried_ambient
-entity.panda.hurt: entity.panda.hurt
-entity.panda.bite: entity.panda.bite
-entity.phantom.ambient: entity.phantom.ambient
-entity.phantom.bite: entity.phantom.bite
-entity.phantom.death: entity.phantom.death
-entity.phantom.flap: entity.phantom.flap
-entity.phantom.hurt: entity.phantom.hurt
-entity.phantom.swoop: entity.phantom.swoop
-entity.pillager.ambient: entity.pillager.ambient
-entity.pillager.celebrate: entity.pillager.celebrate
-entity.pillager.death: entity.pillager.death
-entity.pillager.hurt: entity.pillager.hurt
-entity.player.hurt_sweet_berry_bush: entity.player.hurt_sweet_berry_bush
-entity.player.splash.high_speed: entity.player.splash.high_speed
-entity.puffer_fish.ambient: entity.puffer_fish.ambient
-entity.puffer_fish.blow_out: entity.puffer_fish.blow_out
-entity.puffer_fish.blow_up: entity.puffer_fish.blow_up
-entity.puffer_fish.death: entity.puffer_fish.death
-entity.puffer_fish.flop: entity.puffer_fish.flop
-entity.puffer_fish.hurt: entity.puffer_fish.hurt
-entity.puffer_fish.sting: entity.puffer_fish.sting
-block.pumpkin.carve: block.pumpkin.carve
-event.raid.horn: event.raid.horn
-entity.salmon.ambient: entity.salmon.ambient
-entity.salmon.death: entity.salmon.death
-entity.salmon.flop: entity.salmon.flop
-entity.salmon.hurt: entity.salmon.hurt
-block.scaffolding.break: block.scaffolding.break
-block.scaffolding.fall: block.scaffolding.fall
-block.scaffolding.hit: block.scaffolding.hit
-block.scaffolding.place: block.scaffolding.place
-block.scaffolding.step: block.scaffolding.step
-entity.skeleton_horse.swim: entity.skeleton_horse.swim
-entity.skeleton_horse.ambient_water: entity.skeleton_horse.ambient_water
-entity.skeleton_horse.gallop_water: entity.skeleton_horse.gallop_water
-entity.skeleton_horse.jump_water: entity.skeleton_horse.jump_water
-entity.skeleton_horse.step_water: entity.skeleton_horse.step_water
-block.smoker.smoke: block.smoker.smoke
-entity.squid.squirt: entity.squid.squirt
-block.sweet_berry_bush.break: block.sweet_berry_bush.break
-block.sweet_berry_bush.place: block.sweet_berry_bush.place
-item.sweet_berries.pick_from_bush: item.sweet_berries.pick_from_bush
-item.trident.hit: item.trident.hit
-item.trident.hit_ground: item.trident.hit_ground
-item.trident.return: item.trident.return
-item.trident.riptide_1: item.trident.riptide_1
-item.trident.riptide_2: item.trident.riptide_2
-item.trident.riptide_3: item.trident.riptide_3
-item.trident.throw: item.trident.throw
-item.trident.thunder: item.trident.thunder
-entity.tropical_fish.ambient: entity.tropical_fish.ambient
-entity.tropical_fish.death: entity.tropical_fish.death
-entity.tropical_fish.flop: entity.tropical_fish.flop
-entity.tropical_fish.hurt: entity.tropical_fish.hurt
-entity.turtle.ambient_land: entity.turtle.ambient_land
-entity.turtle.death: entity.turtle.death
-entity.turtle.death_baby: entity.turtle.death_baby
-entity.turtle.egg_break: entity.turtle.egg_break
-entity.turtle.egg_crack: entity.turtle.egg_crack
-entity.turtle.egg_hatch: entity.turtle.egg_hatch
-entity.turtle.hurt: entity.turtle.hurt
-entity.turtle.hurt_baby: entity.turtle.hurt_baby
-entity.turtle.lay_egg: entity.turtle.lay_egg
-entity.turtle.shamble: entity.turtle.shamble
-entity.turtle.shamble_baby: entity.turtle.shamble_baby
-entity.turtle.swim: entity.turtle.swim
-ui.loom.select_pattern: ui.loom.select_pattern
-ui.loom.take_result: ui.loom.take_result
-ui.cartography_table.take_result: ui.cartography_table.take_result
-ui.stonecutter.take_result: ui.stonecutter.take_result
-ui.stonecutter.select_recipe: ui.stonecutter.select_recipe
-entity.villager.celebrate: entity.villager.celebrate
-entity.villager.work_armorer: entity.villager.work_armorer
-entity.villager.work_butcher: entity.villager.work_butcher
-entity.villager.work_cartographer: entity.villager.work_cartographer
-entity.villager.work_cleric: entity.villager.work_cleric
-entity.villager.work_farmer: entity.villager.work_farmer
-entity.villager.work_fisherman: entity.villager.work_fisherman
-entity.villager.work_fletcher: entity.villager.work_fletcher
-entity.villager.work_leatherworker: entity.villager.work_leatherworker
-entity.villager.work_librarian: entity.villager.work_librarian
-entity.villager.work_mason: entity.villager.work_mason
-entity.villager.work_shepherd: entity.villager.work_shepherd
-entity.villager.work_toolsmith: entity.villager.work_toolsmith
-entity.villager.work_weaponsmith: entity.villager.work_weaponsmith
-entity.wandering_trader.ambient: entity.wandering_trader.ambient
-entity.wandering_trader.death: entity.wandering_trader.death
-entity.wandering_trader.disappeared: entity.wandering_trader.disappeared
-entity.wandering_trader.drink_milk: entity.wandering_trader.drink_milk
-entity.wandering_trader.drink_potion: entity.wandering_trader.drink_potion
-entity.wandering_trader.hurt: entity.wandering_trader.hurt
-entity.wandering_trader.no: entity.wandering_trader.no
-entity.wandering_trader.reappeared: entity.wandering_trader.reappeared
-entity.wandering_trader.trade: entity.wandering_trader.trade
-entity.wandering_trader.yes: entity.wandering_trader.yes
-entity.witch.celebrate: entity.witch.celebrate
-entity.zombie.converted_to_drowned: entity.zombie.converted_to_drowned
-entity.zombie.destroy_egg: entity.zombie.destroy_egg
-block.note_block.iron_xylophone: block.note_block.iron_xylophone
-block.note_block.cow_bell: block.note_block.cow_bell
-block.note_block.didgeridoo: block.note_block.didgeridoo
-block.note_block.bit: block.note_block.bit
-block.note_block.banjo: block.note_block.banjo
-entity.evoker.celebrate: entity.evoker.celebrate
-entity.vindicator.celebrate: entity.vindicator.celebrate
-entity.parrot.imitate.drowned: entity.parrot.imitate.drowned
-entity.parrot.imitate.guardian: entity.parrot.imitate.guardian
-entity.parrot.imitate.panda: entity.parrot.imitate.drowned #LEGACY
-entity.parrot.imitate.phantom: entity.parrot.imitate.phantom
-entity.parrot.imitate.pillager: entity.parrot.imitate.pillager
-entity.parrot.imitate.ravager: entity.parrot.imitate.ravager
-block.honey_block.break: block.honey_block.break
-item.honey_bottle.drink: item.honey_bottle.drink
-entity.bee.death: entity.bee.death
-entity.bee.hurt: entity.bee.hurt
-entity.bee.loop_aggressive: entity.bee.loop_aggressive
-entity.bee.loop: entity.bee.loop
-entity.bee.sting: entity.bee.sting
-entity.bee.pollinate: entity.bee.pollinate
-block.beehive.drip: block.beehive.drip
-block.beehive.enter: block.beehive.enter
-block.beehive.exit: block.beehive.exit
-block.beehive.shear: block.beehive.shear
-block.beehive.work: block.beehive.work
+block.lantern.break: BLOCK_LANTERN_BREAK
+block.lantern.fall: BLOCK_LANTERN_FALL
+block.lantern.hit: BLOCK_LANTERN_HIT
+block.lantern.place: BLOCK_LANTERN_PLACE
+block.lantern.step: BLOCK_LANTERN_STEP
+entity.mooshroom.convert: ENTITY_MOOSHROOM_CONVERT
+entity.mooshroom.eat: ENTITY_MOOSHROOM_EAT
+entity.mooshroom.milk: ENTITY_MOOSHROOM_MILK
+entity.mooshroom.suspicious_milk: ENTITY_MOOSHROOM_SUSPICIOUS_MILK
+music.under_water: MUSIC_UNDER_WATER
+block.nether_wart.break: BLOCK_NETHER_WART_BREAK
+item.nether_wart.plant: ITEM_NETHER_WART_PLANT
+entity.ocelot.hurt: ENTITY_OCELOT_HURT
+entity.ocelot.ambient: ENTITY_OCELOT_AMBIENT
+entity.ocelot.death: ENTITY_OCELOT_DEATH
+entity.panda.pre_sneeze: ENTITY_PANDA_PRE_SNEEZE
+entity.panda.sneeze: ENTITY_PANDA_SNEEZE
+entity.panda.ambient: ENTITY_PANDA_AMBIENT
+entity.panda.death: ENTITY_PANDA_DEATH
+entity.panda.eat: ENTITY_PANDA_EAT
+entity.panda.step: ENTITY_PANDA_STEP
+entity.panda.cant_breed: ENTITY_PANDA_CANT_BREED
+entity.panda.aggressive_ambient: ENTITY_PANDA_AGGRESSIVE_AMBIENT
+entity.panda.worried_ambient: ENTITY_PANDA_WORRIED_AMBIENT
+entity.panda.hurt: ENTITY_PANDA_HURT
+entity.panda.bite: ENTITY_PANDA_BITE
+entity.phantom.ambient: ENTITY_PHANTOM_AMBIENT
+entity.phantom.bite: ENTITY_PHANTOM_BITE
+entity.phantom.death: ENTITY_PHANTOM_DEATH
+entity.phantom.flap: ENTITY_PHANTOM_FLAP
+entity.phantom.hurt: ENTITY_PHANTOM_FLAP
+entity.phantom.swoop: ENTITY_PHANTOM_SWOOP
+entity.pillager.ambient: ENTITY_PILLAGER_AMBIENT
+entity.pillager.celebrate: ENTITY_PILLAGER_AMBIENT
+entity.pillager.death: ENTITY_PILLAGER_DEATH
+entity.pillager.hurt: ENTITY_PILLAGER_HURT
+entity.player.hurt_sweet_berry_bush: ENTITY_PLAYER_HURT_SWEET_BERRY_BUSH
+entity.player.splash.high_speed: ENTITY_PLAYER_SPLASH_HIGH_SPEED
+entity.puffer_fish.ambient: ENTITY_PUFFER_FISH_AMBIENT
+entity.puffer_fish.blow_out: ENTITY_PUFFER_FISH_BLOW_OUT
+entity.puffer_fish.blow_up: ENTITY_PUFFER_FISH_BLOW_UP
+entity.puffer_fish.death: ENTITY_PUFFER_FISH_DEATH
+entity.puffer_fish.flop: ENTITY_PUFFER_FISH_FLOP
+entity.puffer_fish.hurt: ENTITY_PUFFER_FISH_HURT
+entity.puffer_fish.sting: ENTITY_PUFFER_FISH_STING
+block.pumpkin.carve: BLOCK_PUMPKIN_CARVE
+event.raid.horn: EVENT_RAID_HORN
+entity.salmon.ambient: ENTITY_SALMON_AMBIENT
+entity.salmon.death: ENTITY_SALMON_DEATH
+entity.salmon.flop: ENTITY_SALMON_DEATH
+entity.salmon.hurt: ENTITY_SALMON_HURT
+block.scaffolding.break: BLOCK_SCAFFOLDING_BREAK
+block.scaffolding.fall: BLOCK_SCAFFOLDING_FALL
+block.scaffolding.hit: BLOCK_SCAFFOLDING_HIT
+block.scaffolding.place: BLOCK_SCAFFOLDING_PLACE
+block.scaffolding.step: BLOCK_SCAFFOLDING_STEP
+entity.skeleton_horse.swim: ENTITY_SKELETON_HORSE_SWIM
+entity.skeleton_horse.ambient_water: ENTITY_SKELETON_HORSE_AMBIENT_WATER
+entity.skeleton_horse.gallop_water: ENTITY_SKELETON_HORSE_GALLOP_WATER
+entity.skeleton_horse.jump_water: ENTITY_SKELETON_HORSE_JUMP_WATER
+entity.skeleton_horse.step_water: ENTITY_SKELETON_HORSE_STEP_WATER
+block.smoker.smoke: BLOCK_SMOKER_SMOKE
+entity.squid.squirt: ENTITY_SQUID_SQUIRT
+block.sweet_berry_bush.break: BLOCK_SWEET_BERRY_BUSH_BREAK
+block.sweet_berry_bush.place: BLOCK_SWEET_BERRY_BUSH_PLACE
+item.sweet_berries.pick_from_bush: ITEM_SWEET_BERRIES_PICK_FROM_BUSH
+item.trident.hit: ITEM_TRIDENT_HIT
+item.trident.hit_ground: ITEM_TRIDENT_HIT_GROUND
+item.trident.return: ITEM_TRIDENT_RETURN
+item.trident.riptide_1: ITEM_TRIDENT_RIPTIDE_1
+item.trident.riptide_2: ITEM_TRIDENT_RIPTIDE_2
+item.trident.riptide_3: ITEM_TRIDENT_RIPTIDE_3
+item.trident.throw: ITEM_TRIDENT_THROW
+item.trident.thunder: ITEM_TRIDENT_THUNDER
+entity.tropical_fish.ambient: ENTITY_TROPICAL_FISH_AMBIENT
+entity.tropical_fish.death: ENTITY_TROPICAL_FISH_DEATH
+entity.tropical_fish.flop: ENTITY_TROPICAL_FISH_FLOP
+entity.tropical_fish.hurt: ENTITY_TROPICAL_FISH_HURT
+entity.turtle.ambient_land: ENTITY_TURTLE_AMBIENT_LAND
+entity.turtle.death: ENTITY_TURTLE_DEATH
+entity.turtle.death_baby: ENTITY_TURTLE_DEATH_BABY
+entity.turtle.egg_break: ENTITY_TURTLE_EGG_BREAK
+entity.turtle.egg_crack: ENTITY_TURTLE_EGG_CRACK
+entity.turtle.egg_hatch: ENTITY_TURTLE_EGG_HATCH
+entity.turtle.hurt: ENTITY_TURTLE_HURT
+entity.turtle.hurt_baby: ENTITY_TURTLE_HURT_BABY
+entity.turtle.lay_egg: ENTITY_TURTLE_LAY_EGG
+entity.turtle.shamble: ENTITY_TURTLE_SHAMBLE
+entity.turtle.shamble_baby: ENTITY_TURTLE_SHAMBLE_BABY
+entity.turtle.swim: ENTITY_TURTLE_SWIM
+ui.loom.select_pattern: UI_LOOM_SELECT_PATTERN
+ui.loom.take_result: UI_LOOM_TAKE_RESULT
+ui.cartography_table.take_result: UI_CARTOGRAPHY_TABLE_TAKE_RESULT
+ui.stonecutter.take_result: UI_STONECUTTER_TAKE_RESULT
+ui.stonecutter.select_recipe: UI_STONECUTTER_SELECT_RECIPE
+entity.villager.celebrate: ENTITY_VILLAGER_CELEBRATE
+entity.villager.work_armorer: ENTITY_VILLAGER_WORK_ARMORER
+entity.villager.work_butcher: ENTITY_VILLAGER_WORK_BUTCHER
+entity.villager.work_cartographer: ENTITY_VILLAGER_WORK_CARTOGRAPHER
+entity.villager.work_cleric: ENTITY_VILLAGER_WORK_CLERIC
+entity.villager.work_farmer: ENTITY_VILLAGER_WORK_FARMER
+entity.villager.work_fisherman: ENTITY_VILLAGER_WORK_FISHERMAN
+entity.villager.work_fletcher: ENTITY_VILLAGER_WORK_FLETCHER
+entity.villager.work_leatherworker: ENTITY_VILLAGER_WORK_LEATHERWORKER
+entity.villager.work_librarian: ENTITY_VILLAGER_WORK_LIBRARIAN
+entity.villager.work_mason: ENTITY_VILLAGER_WORK_MASON
+entity.villager.work_shepherd: ENTITY_VILLAGER_WORK_SHEPHERD
+entity.villager.work_toolsmith: ENTITY_VILLAGER_WORK_TOOLSMITH
+entity.villager.work_weaponsmith: ENTITY_VILLAGER_WORK_WEAPONSMITH
+entity.wandering_trader.ambient: ENTITY_WANDERING_TRADER_AMBIENT
+entity.wandering_trader.death: ENTITY_WANDERING_TRADER_DEATH
+entity.wandering_trader.disappeared: ENTITY_WANDERING_TRADER_DISAPPEARED
+entity.wandering_trader.drink_milk: ENTITY_WANDERING_TRADER_DRINK_MILK
+entity.wandering_trader.drink_potion: ENTITY_WANDERING_TRADER_DRINK_POTION
+entity.wandering_trader.hurt: ENTITY_WANDERING_TRADER_HURT
+entity.wandering_trader.no: ENTITY_WANDERING_TRADER_NO
+entity.wandering_trader.reappeared: ENTITY_WANDERING_TRADER_REAPPEARED
+entity.wandering_trader.trade: ENTITY_WANDERING_TRADER_TRADE
+entity.wandering_trader.yes: ENTITY_WANDERING_TRADER_YES
+entity.witch.celebrate: ENTITY_WITCH_CELEBRATE
+entity.zombie.converted_to_drowned: ENTITY_ZOMBIE_CONVERTED_TO_DROWNED
+entity.zombie.destroy_egg: ENTITY_ZOMBIE_DESTROY_EGG
+block.note_block.iron_xylophone: BLOCK_NOTE_BLOCK_IRON_XYLOPHONE
+block.note_block.cow_bell: BLOCK_NOTE_BLOCK_COW_BELL
+block.note_block.didgeridoo: BLOCK_NOTE_BLOCK_DIDGERIDOO
+block.note_block.bit: BLOCK_NOTE_BLOCK_BIT
+block.note_block.banjo: BLOCK_NOTE_BLOCK_BANJO
+entity.evoker.celebrate: ENTITY_EVOKER_CELEBRATE
+entity.vindicator.celebrate: ENTITY_VINDICATOR_CELEBRATE
+entity.parrot.imitate.drowned: ENTITY_PARROT_IMITATE_DROWNED
+entity.parrot.imitate.guardian: ENTITY_PARROT_IMITATE_GUARDIAN
+entity.parrot.imitate.panda: ENTITY_PARROT_IMITATE_DROWNED #LEGACY
+entity.parrot.imitate.phantom: ENTITY_PARROT_IMITATE_PHANTOM
+entity.parrot.imitate.pillager: ENTITY_PARROT_IMITATE_PILLAGER
+entity.parrot.imitate.ravager: ENTITY_PARROT_IMITATE_RAVAGER
+block.honey_block.break: BLOCK_HONEY_BLOCK_BREAK
+item.honey_bottle.drink: ITEM_HONEY_BOTTLE_DRINK
+entity.bee.death: ENTITY_BEE_DEATH
+entity.bee.hurt: ENTITY_BEE_HURT
+entity.bee.loop_aggressive: ENTITY_BEE_LOOP_AGGRESSIVE
+entity.bee.loop: ENTITY_BEE_LOOP
+entity.bee.sting: ENTITY_BEE_STING
+entity.bee.pollinate: ENTITY_BEE_POLLINATE
+block.beehive.drip: BLOCK_BEEHIVE_DRIP
+block.beehive.enter: BLOCK_BEEHIVE_ENTER
+block.beehive.exit: BLOCK_BEEHIVE_EXIT
+block.beehive.shear: BLOCK_BEEHIVE_SHEAR
+block.beehive.work: BLOCK_BEEHIVE_WORK
