--- a/src/datalists/biomes.yaml
+++ b/src/datalists/biomes.yaml
@@ -1,4 +1,4 @@
-soul_sand_valley: SOUL_SAND_VALLEY
-crimson_forest: CRIMSON_FOREST
-warped_forest: WARPED_FOREST
-basalt_delta: BASALT_DELTAS
+- soul_sand_valley
+- crimson_forest
+- warped_forest
+- basalt_delta
