--- a/src/fabric-1.16.2/mappings/biomes.yaml
+++ b/src/fabric-1.16.2/mappings/biomes.yaml
@@ -74,3 +74,7 @@ modified_wooded_badlands_plateau: MODIFIED_WOODED_BADLANDS_PLATEAU
 modified_badlands_plateau: MODIFIED_BADLANDS_PLATEAU
 bamboo_jungle: BAMBOO_JUNGLE
 bamboo_jungle_hills: BAMBOO_JUNGLE_HILLS
+soul_sand_valley: SOUL_SAND_VALLEY
+crimson_forest: CRIMSON_FOREST
+warped_forest: WARPED_FOREST
+basalt_delta: BASALT_DELTAS
