--- a/src/fabric-1.16.2/mappings/blocksitems.yaml
+++ b/src/fabric-1.16.2/mappings/blocksitems.yaml
@@ -3231,3 +3231,282 @@ Items.HONEYCOMB:
 Items.HONEY_BOTTLE:
   - Items.HONEY_BOTTLE
   - "honey_bottle"
+Blocks.ANCIENT_DEBRIS:
+  - Blocks.ANCIENT_DEBRIS
+  - "ancient_debris"
+Blocks.BASALT:
+  - Blocks.BASALT
+  - "basalt"
+Blocks.POLISHED_BASALT:
+  - Blocks.POLISHED_BASALT
+  - "polished_basalt"
+Blocks.BLACKSTONE:
+  - Blocks.BLACKSTONE
+  - "blackstone"
+Blocks.BLACKSTONE_SLAB:
+  - Blocks.BLACKSTONE_SLAB
+  - "blackstone_slab"
+Blocks.BLACKSTONE_STAIRS:
+  - Blocks.BLACKSTONE_STAIRS
+  - "blackstone_stairs"
+Blocks.BLACKSTONE_WALL:
+  - Blocks.BLACKSTONE_WALL
+  - "blackstone_wall"
+Blocks.POLISHED_BLACKSTONE:
+  - Blocks.POLISHED_BLACKSTONE
+  - "polished_blackstone"
+Blocks.CHISELED_POLISHED_BLACKSTONE:
+  - Blocks.CHISELED_POLISHED_BLACKSTONE
+  - "chiseled_polished_blackstone"
+Blocks.POLISHED_BLACKSTONE_SLAB:
+  - Blocks.POLISHED_BLACKSTONE_SLAB
+  - "polished_blackstone_slab"
+Blocks.POLISHED_BLACKSTONE_STAIRS:
+  - Blocks.POLISHED_BLACKSTONE_STAIRS
+  - "polished_blackstone_stairs"
+Blocks.POLISHED_BLACKSTONE_WALL:
+  - Blocks.POLISHED_BLACKSTONE_WALL
+  - "polished_blackstone_wall"
+Blocks.POLISHED_BLACKSTONE_PRESSURE_PLATE:
+  - Blocks.POLISHED_BLACKSTONE_PRESSURE_PLATE
+  - "polished_blackstone_pressure_plate"
+Blocks.POLISHED_BLACKSTONE_BUTTON:
+  - Blocks.POLISHED_BLACKSTONE_BUTTON
+  - "polished_blackstone_button"
+Blocks.POLISHED_BLACKSTONE_BRICKS:
+  - Blocks.POLISHED_BLACKSTONE_BRICKS
+  - "polished_blackstone_bricks"
+Blocks.CRACKED_POLISHED_BLACKSTONE_BRICKS:
+  - Blocks.CRACKED_POLISHED_BLACKSTONE_BRICKS
+  - "cracked_polished_blackstone_bricks"
+Blocks.POLISHED_BLACKSTONE_BRICK_SLAB:
+  - Blocks.POLISHED_BLACKSTONE_BRICK_SLAB
+  - "polished_blackstone_brick_slab"
+Blocks.POLISHED_BLACKSTONE_BRICK_STAIRS:
+  - Blocks.POLISHED_BLACKSTONE_BRICK_STAIRS
+  - "polished_blackstone_brick_stairs"
+Blocks.POLISHED_BLACKSTONE_BRICK_WALL:
+  - Blocks.POLISHED_BLACKSTONE_BRICK_WALL
+  - "polished_blackstone_brick-wall"
+Blocks.NETHERITE_BLOCK:
+  - Blocks.NETHERITE_BLOCK
+  - "netherite_block"
+Blocks.CHAIN:
+  - Blocks.CHAIN
+  - "chain"
+Blocks.CHISELED_NETHER_BRICKS:
+  - Blocks.CHISELED_NETHER_BRICKS
+  - "chiseled_nether_bricks"
+Blocks.CRACKED_NETHER_BRICKS:
+  - Blocks.CRACKED_NETHER_BRICKS
+  - "cracked_nether_bricks"
+Blocks.CRIMSON_FUNGUS:
+  - Blocks.CRIMSON_FUNGUS
+  - "crimson_fungus"
+Blocks.WARPED_FUNGUS:
+  - Blocks.WARPED_FUNGUS
+  - "warped_fungus"
+Blocks.CRIMSON_NYLIUM:
+  - Blocks.CRIMSON_NYLIUM
+  - "crimson_nylium"
+Blocks.WARPED_NYLIUM:
+  - Blocks.WARPED_NYLIUM
+  - "warped_nylium"
+Blocks.CRIMSON_PLANKS:
+  - Blocks.CRIMSON_PLANKS
+  - "crimson_planks"
+Blocks.WARPED_PLANKS:
+  - Blocks.WARPED_PLANKS
+  - "warped_planks"
+Blocks.CRIMSON_SLAB:
+  - Blocks.CRIMSON_SLAB
+  - "crimson_slab"
+Blocks.WARPED_SLAB:
+  - Blocks.WARPED_SLAB
+  - "warped_slab"
+Blocks.CRIMSON_STAIRS:
+  - Blocks.CRIMSON_STAIRS
+  - "crimson_stairs"
+Blocks.WARPED_STAIRS:
+  - Blocks.WARPED_STAIRS
+  - "warped_stairs"
+Blocks.CRIMSON_FENCE:
+  - Blocks.CRIMSON_FENCE
+  - "crimson_fence"
+Blocks.WARPED_FENCE:
+  - Blocks.WARPED_FENCE
+  - "warped_fence"
+Blocks.CRIMSON_FENCE_GATE:
+  - Blocks.CRIMSON_FENCE_GATE
+  - "crimson_fence_gate"
+Blocks.WARPED_FENCE_GATE:
+  - Blocks.WARPED_FENCE_GATE
+  - "warped_fence_gate"
+Blocks.CRIMSON_PRESSURE_PLATE:
+  - Blocks.CRIMSON_PRESSURE_PLATE
+  - "crimson_pressure_plate"
+Blocks.WARPED_PRESSURE_PLATE:
+  - Blocks.WARPED_PRESSURE_PLATE
+  - "warped_pressure_plate"
+Blocks.CRIMSON_BUTTON:
+  - Blocks.CRIMSON_BUTTON
+  - "crimson_button"
+Blocks.WARPED_BUTTON:
+  - Blocks.WARPED_BUTTON
+  - "warped_warped_button"
+Blocks.CRIMSON_SIGN:
+  - Blocks.CRIMSON_SIGN
+  - "crimson_sign"
+Blocks.WARPED_SIGN:
+  - Blocks.WARPED_SIGN
+  - "warped_sign"
+Blocks.CRIMSON_DOOR:
+  - Blocks.CRIMSON_DOOR
+  - "crimson_door"
+Blocks.WARPED_DOOR:
+  - Blocks.WARPED_DOOR
+  - "warped_door"
+Blocks.CRIMSON_TRAPDOOR:
+  - Blocks.CRIMSON_TRAPDOOR
+  - "crimson_trapdoor"
+Blocks.WARPED_TRAPDOOR:
+  - Blocks.WARPED_TRAPDOOR
+  - "warped_trapdoor"
+Blocks.CRIMSON_ROOTS:
+  - Blocks.CRIMSON_ROOTS
+  - "crimson_roots"
+Blocks.WARPED_ROOTS:
+  - Blocks.WARPED_ROOTS
+  - "warped_roots"
+Blocks.CRIMSON_STEM:
+  - Blocks.CRIMSON_STEM
+  - "crimson_stem"
+Blocks.WARPED_STEM:
+  - Blocks.WARPED_STEM
+  - "warped_stem"
+Blocks.STRIPPED_CRIMSON_STEM:
+  - Blocks.STRIPPED_CRIMSON_STEM
+  - "stripped_crimson_stem"
+Blocks.STRIPPED_WARPED_STEM:
+  - Blocks.STRIPPED_WARPED_STEM
+  - "stripped_warped_stem"
+Blocks.CRYING_OBSIDIAN:
+  - Blocks.CRYING_OBSIDIAN
+  - "crying_obsidian"
+Blocks.GILDED_BLACKSTONE:
+  - Blocks.GILDED_BLACKSTONE
+  - "gilded_blackstone"
+Blocks.CRIMSON_HYPHAE:
+  - Blocks.CRIMSON_HYPHAE
+  - "crimson_hyphae"
+Blocks.WARPED_HYPHAE:
+  - Blocks.WARPED_HYPHAE
+  - "warped_hyphae"
+Blocks.STRIPPED_CRIMSON_HYPHAE:
+  - Blocks.STRIPPED_CRIMSON_HYPHAE
+  - "stripped_crimson_hyphae"
+Blocks.STRIPPED_WARPED_HYPHAE:
+  - Blocks.STRIPPED_WARPED_HYPHAE
+  - "stripped_warped_hyphae"
+Blocks.LODESTONE:
+  - Blocks.LODESTONE
+  - "lodestone"
+Blocks.NETHER_GOLD_ORE:
+  - Blocks.NETHER_GOLD_ORE
+  - "nether_gold_ore"
+Blocks.NETHER_SPROUTS:
+  - Blocks.NETHER_SPROUTS
+  - "nether_sprouts"
+Blocks.QUARTZ_BRICKS:
+  - Blocks.QUARTZ_BRICKS
+  - "quartz_bricks"
+Blocks.RESPAWN_ANCHOR:
+  - Blocks.RESPAWN_ANCHOR
+  - "respawn_anchor"
+Blocks.SHROOMLIGHT:
+  - Blocks.SHROOMLIGHT
+  - "shroomlight"
+Blocks.SOUL_CAMPFIRE:
+  - Blocks.SOUL_CAMPFIRE
+  - "soul_campfire"
+Blocks.SOUL_FIRE:
+  - Blocks.SOUL_FIRE
+  - "soul_fire"
+Blocks.SOUL_LANTERN:
+  - Blocks.SOUL_LANTERN
+  - "soul_lantern"
+Blocks.SOUL_TORCH:
+  - Blocks.SOUL_TORCH
+  - "soul_torch"
+Blocks.SOUL_SOIL:
+  - Blocks.SOUL_SOIL
+  - "soul_soil"
+Blocks.TARGET:
+  - Blocks.TARGET
+  - "target"
+Blocks.TWISTING_VINES:
+  - Blocks.TWISTING_VINES
+  - "twisting_vines"
+Blocks.WARPED_WART_BLOCK:
+  - Blocks.WARPED_WART_BLOCK
+  - "warped_wart_block"
+Blocks.WEEPING_VINES:
+  - Blocks.WEEPING_VINES
+  - "weeping_vines"
+Items.MUSIC_DISC_PIGSTEP:
+  - Items.MUSIC_DISC_PIGSTEP
+  - "music_disc_pigstep"
+Items.NETHERITE_HELMET:
+  - Items.NETHERITE_HELMET
+  - "netherite_helmet"
+Items.NETHERITE_CHESTPLATE:
+  - Items.NETHERITE_CHESTPLATE
+  - "netherite_chestplate"
+Items.NETHERITE_LEGGINGS:
+  - Items.NETHERITE_LEGGINGS
+  - "netherite_leggings"
+Items.NETHERITE_BOOTS:
+  - Items.NETHERITE_BOOTS
+  - "netherite_boots"
+Items.NETHERITE_AXE:
+  - Items.NETHERITE_AXE
+  - "netherite_axe"
+Items.NETHERITE_HOE:
+  - Items.NETHERITE_HOE
+  - "netherite_hoe"
+Items.NETHERITE_PICKAXE:
+  - Items.NETHERITE_PICKAXE
+  - "netherite_pickaxe"
+Items.NETHERITE_SHOVEL:
+  - Items.NETHERITE_SHOVEL
+  - "netherite_shovel"
+Items.NETHERITE_SWORD:
+  - Items.NETHERITE_SWORD
+  - "netherite_sword"
+Items.NETHERITE_INGOT:
+  - Items.NETHERITE_INGOT
+  - "netherite_ingot"
+Items.NETHERITE_SCRAP:
+  - Items.NETHERITE_SCRAP
+  - "netherite_scrap"
+Items.SNOUT_BANNER_PATTERN:
+  - Items.SNOUT_BANNER_PATTERN
+  - "snout_banner_pattern"
+Items.HOGLIN_SPAWN_EGG:
+  - Items.HOGLIN_SPAWN_EGG
+  - "hoglin_spawn_egg"
+Items.PIGLIN_SPAWN_EGG:
+  - Items.PIGLIN_SPAWN_EGG
+  - "piglin_spawn_egg"
+Items.PIGLIN_BRUTE_SPAWN_EGG:
+  - Items.PIGLIN_BRUTE_SPAWN_EGG
+  - "piglin_brute_spawn_egg"
+Items.STRIDER_SPAWN_EGG:
+  - Items.STRIDER_SPAWN_EGG
+  - "stridder_spawn_egg"
+Items.ZOGLIN_SPAWN_EGG:
+  - Items.ZOGLIN_SPAWN_EGG
+  - "zoglin_spawn_egg"
+Items.WARPED_FUNGUS_ON_A_STICK:
+  - Items.WARPED_FUNGUS_ON_A_STICK
+  - "warped_fungus_on_a_stick"
