--- a/src/fabric-1.16.2/mappings/entities.yaml
+++ b/src/fabric-1.16.2/mappings/entities.yaml
@@ -331,3 +331,18 @@ EntityPlayerMP:
 EntityFishHook:
   - FishingBobberEntity
   - FISHING_BOBBER
+EntityHoglin:
+  - HoglinEntity
+  - HOGLIN
+EntityPiglin:
+  - PiglinEntity
+  - PIGLIN
+EntityPiglinBrute:
+  - PiglinBruteEntity
+  - PIGLIN_BRUTE
+EntityStrider:
+  - StriderEntity
+  - STRIDER
+EntityZoglin:
+  - ZoglinEntity
+  - ZOGLIN
