--- a/src/fabric-1.16.2/mappings/mapcolors.yaml
+++ b/src/fabric-1.16.2/mappings/mapcolors.yaml
@@ -35,7 +35,7 @@ DIAMOND: DIAMOND
 LAPIS: LAPIS
 EMERALD: EMERALD
 OBSIDIAN: OBSIDIAN
-NETHERRACK: NETHERRACK
+NETHERRACK: NETHER
 WHITE_TERRACOTTA: WHITE_TERRACOTTA
 ORANGE_TERRACOTTA: ORANGE_TERRACOTTA
 MAGENTA_TERRACOTTA: MAGENTA_TERRACOTTA
@@ -52,3 +52,4 @@ BROWN_TERRACOTTA: BROWN_TERRACOTTA
 GREEN_TERRACOTTA: GREEN_TERRACOTTA
 RED_TERRACOTTA: RED_TERRACOTTA
 BLACK_TERRACOTTA: BLACK_TERRACOTTA
+SPRUCE: SPRUCE
