--- a/src/fabric-1.16.2/mappings/particles.yaml
+++ b/src/fabric-1.16.2/mappings/particles.yaml
@@ -60,3 +60,13 @@ FALLING_NECTAR: FALLING_NECTAR
 SUSPENDED_DEPTH: UNDERWATER # Legacy Mapping
 SPELL_MOB: WITCH # Legacy Mapping
 SNOW_SHOVEL: ITEM_SNOWBALL # Legacy Mapping
+SOUL_FIRE_FLAME: SOUL_FIRE_FLAME
+SOUL: SOUL
+ASH: ASH
+CRIMSON_SPORE: CRIMSON_SPORE
+WARPED_SPORE: WARPED_SPORE
+DRIPPING_OBSIDIAN_TEAR: DRIPPING_OBSIDIAN_TEAR
+FALLING_OBSIDIAN_TEAR: FALLING_OBSIDIAN_TEAR
+LANDING_OBSIDIAN_TEAR: LANDING_OBSIDIAN_TEAR
+REVERSE_PORTAL: REVERSE_PORTAL
+WHITE_ASH: WHITE_ASH
