--- a/src/fabric-1.16.2/mappings/stepsounds.yaml
+++ b/src/fabric-1.16.2/mappings/stepsounds.yaml
@@ -23,3 +23,22 @@ CROP: CROP
 NETHER_WART: NETHER_WART
 LANTERN: LANTERN
 HONEY: HONEY
+NETHER_STEM: NETHER_STEM
+NYLIUM: NYLIUM
+FUNGUS: FUNGUS
+SHROOMLIGHT: SHROOMLIGHT
+WEEPING_VINES: WEEPING_VINES
+SOUL_SAND: SOUL_SAND
+SOUL_SOIL: SOUL_SOIL
+BASALT: BASALT
+WART_BLOCK: WART_BLOCK
+NETHERRACK: NETHERRACK
+NETHER_BRICKS: NETHER_BRICKS
+NETHER_SPROUTS: NETHER_SPROUTS
+BONE: BONE
+NETHERITE: NETHERITE
+ANCIENT_DEBRIS: ANCIENT_DEBRIS
+LODESTONE: LODESTONE
+CHAIN: CHAIN
+GILDED_BLACKSTONE: GILDED_BLACKSTONE
+NETHER_GOLD_ORE: NETHER_GOLD_ORE
